# FirstNeuralNet

./: .gitignore  CMakeLists.txt  README.md  datacreator.sh  trainingData.txt
src/: main.cpp
src/net/: Connection.cpp  Connection.h  Layer.cpp  Layer.h  Net.cpp  Net.h  Neuron.cpp  Neuron.h
src/training/: TrainingData.cpp  TrainingData.h
